--- a/index.html
+++ b/index.html
@@ -1,103 +1,236 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="keywords" content="">
+    <!-- Lien Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+        rel="stylesheet">
     <!-- Link Favicon -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!-- Linkk CSS -->
     <link rel="stylesheet" href="./css/style.css">
     <title>Interior Design</title>
 </head>
+
 <body>
-    <header class="header">
-        <nav>
-            <h3><a href="#">Design Agency</a></h3>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Showcase</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Designers</a></li>
-                <li><a href="#">Packages</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main class="main">
-        <h1>Interior Design</h1>
-        <section>
-            <h2>Showcase</h2>
-            <div>
-                <img src="./img/kitchenconcrete.jpg" alt="Concrete meet bricks">
-                <img src="./img/windowsfortheatrium.jpg" alt="WIndows of the atrium">
-                <img src="./img/light,whiteandtightscandinaviandesign.jpg" alt="Light white and tights scandinavian design">
-                <img src="./img/bedroomandofficeinonespace.jpg" alt="bedroom and office in one space">
-                <img src="./img/Whitewallswithdesignerchairs.jpg" alt="WHite walls with designer chairs">
-                <img src="./img/scandinaviandesign.jpg" alt="Scandivan Design">
-            </div>
-        </section>
-        <section>
-            <h2>Services.</h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor velit nisi numquam non quasi maxime natus voluptate ab aliquam?
-            </p>
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita non harum magnam blanditiis! Deserunt illo quos reprehenderit voluptatum et.
-                Nam commodi vitae laboriosam distinctio, accusamus blanditiis numquam error perspiciatis cumque ducimus tenetur ex libero aperiam, inventore asperiores ad!
-                Fugiat, doloribus perspiciatis esse magni animi amet numquam non temporibus eum odit corporis eaque aliquid iste. Optio, asperiores vitae?
-                Obcaecati, amet officiis laborum doloremque deleniti vel molestiae atque excepturi autem qui quaerat porro enim, nobis ab maxime voluptatibus.
-                Rerum maxime nihil veniam dolorum debitis architecto. Numquam dicta eaque quibusdam voluptates esse minima magni voluptatum omnis reprehenderit doloribus?
-                Rem perferendis quod est accusantium quia a repellat dolores, ratione optio ipsum, fugit facere nisi sit cum impedit deserunt!
-                Ducimus aspernatur nam impedit quia ex, incidunt quidem possimus, exercitationem ut sunt molestiae vitae porro in optio minima culpa!
-            </p>
-        </section>
-        <section>
-            <h2>Designers.</h2>
-            <p>
-                The best team in the world
-            </p>
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita non harum magnam blanditiis! Deserunt illo quos reprehenderit voluptatum et.
-                Nam commodi vitae laboriosam distinctio, accusamus blanditiis numquam error perspiciatis cumque ducimus tenetur ex libero aperiam, inventore asperiores ad!
-                Fugiat, doloribus perspiciatis esse magni animi amet numquam non temporibus eum odit corporis eaque aliquid iste. Optio, asperiores vitae?
-                Obcaecati, amet officiis laborum doloremque deleniti vel molestiae atque excepturi autem qui quaerat porro enim, nobis ab maxime voluptatibus.
-                Rerum maxime nihil veniam dolorum debitis architecto. Numquam dicta eaque quibusdam voluptates esse minima magni voluptatum omnis reprehenderit doloribus?
-                Rem perferendis quod est accusantium quia a repellat dolores, ratione optio ipsum, fugit facere nisi sit cum impedit deserunt!
-            </p>
-            <div>
-                <h3>Our designers are thoughtfully chosen</h3>
-                <div>
-                    <div>
-                        <img src="./img/jane-doe.jpg" alt="Jane Doe">
-                        <h4>Jane Doe</h4>
-                        <p>CEO & Founder</p>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, libero atque.
-                        </p>
+    <div class="container">
+        <header class="header">
+            <nav>
+                <h3>Design Agency</h3>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#showcase">Showcase</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#designers">Designers</a></li>
+                    <li><a href="#packages">Packages</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <div class="twoofthem">
+            <main class="main">
+                <h1>Interior Design</h1>
+                <section id="showcase" class="showcase">
+                    <h2>Showcase.</h2>
+                    <img src="./img/kitchenconcrete.jpg" alt="Concrete meet bricks">
+                    <img src="./img/windowsfortheatrium.jpg" alt="WIndows of the atrium">
+                    <img src="./img/light,whiteandtightscandinaviandesign.jpg"
+                        alt="Light white and tights scandinavian design">
+                    <img src="./img/bedroomandofficeinonespace.jpg" alt="bedroom and office in one space">
+                    <img src="./img/Whitewallswithdesignerchairs.jpg" alt="WHite walls with designer chairs">
+                    <img src="./img/scandinaviandesign.jpg" alt="Scandivan Design">
+                </section>
+                <section id="services" class="services">
+                    <h2>Services.</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor velit nisi numquam non quasi
+                        maxime natus
+                        voluptate ab aliquam?
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita non harum magnam blanditiis!
+                        Deserunt
+                        illo quos reprehenderit voluptatum et.
+                        Nam commodi vitae laboriosam distinctio, accusamus blanditiis numquam error perspiciatis cumque
+                        ducimus
+                        tenetur ex libero aperiam, inventore asperiores ad!
+                        Fugiat, doloribus perspiciatis esse magni animi amet numquam non temporibus eum odit corporis
+                        eaque
+                        aliquid iste. Optio, asperiores vitae?
+                        Obcaecati, amet officiis laborum doloremque deleniti vel molestiae atque excepturi autem qui
+                        quaerat
+                        porro enim, nobis ab maxime voluptatibus.
+                        Rerum maxime nihil veniam dolorum debitis architecto. Numquam dicta eaque quibusdam voluptates
+                        esse
+                        minima magni voluptatum omnis reprehenderit doloribus?
+                        Rem perferendis quod est accusantium quia a repellat dolores, ratione optio ipsum, fugit facere
+                        nisi sit
+                        cum impedit deserunt!
+                        Ducimus aspernatur nam impedit quia ex, incidunt quidem possimus, exercitationem ut sunt
+                        molestiae vitae
+                        porro in optio minima culpa!
+                    </p>
+                </section>
+                <section id="designers" class="designers">
+                    <h2>Designers.</h2>
+                    <p>
+                        The best team in the world
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita non harum magnam blanditiis!
+                        Deserunt
+                        illo quos reprehenderit voluptatum et.
+                        Nam commodi vitae laboriosam distinctio, accusamus blanditiis numquam error perspiciatis cumque
+                        ducimus
+                        tenetur ex libero aperiam, inventore asperiores ad!
+                        Fugiat, doloribus perspiciatis esse magni animi amet numquam non temporibus eum odit corporis
+                        eaque
+                        aliquid iste. Optio, asperiores vitae?
+                        Obcaecati, amet officiis laborum doloremque deleniti vel molestiae atque excepturi autem qui
+                        quaerat
+                        porro enim, nobis ab maxime voluptatibus.
+                        Rerum maxime nihil veniam dolorum debitis architecto. Numquam dicta eaque quibusdam voluptates
+                        esse
+                        minima magni voluptatum omnis reprehenderit doloribus?
+                        Rem perferendis quod est accusantium quia a repellat dolores, ratione optio ipsum, fugit facere
+                        nisi sit
+                        cum impedit deserunt!
+                    </p>
+                    <section class="designers2">
+                        <h3>Our designers are thoughtfully chosen</h3>
+                        <figure>
+                            <img src="./img/jane-doe.jpg" alt="Jane Doe">
+                            <figcaption>
+                                <h4>Jane Doe</h4>
+                                <p>CEO & Founder</p>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, libero atque.
+                                </p>
+                            </figcaption>
+                        </figure>
+                        <figure>
+                            <img src="./img/john-doe.jpg" alt="John Doe">
+                            <figcaption>
+                                <h4>John Doe</h4>
+                                <p>Designer</p>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, libero atque.
+                                </p>
+                            </figcaption>
+                        </figure>
+                        <figure>
+                            <img src="./img/mikeross.jpg" alt="Mike Ross">
+                            <figcaption>
+                                <h4>Mike Ross</h4>
+                                <p>Architect</p>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, libero atque.
+                                </p>
+                            </figcaption>
+                        </figure>
+                    </section>
+                </section>
+                <section id="packages" class="packages">
+                    <h2>Packages .</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, quia labore quis laborum
+                        laudantium quas, id autem incidunt error, modi aliquid adipisci ipsa quo necessitatibus
+                        consectetur corrupti debitis asperiores reiciendis perspiciatis magnam! Eveniet reiciendis enim
+                        impedit voluptate vel exercitationem alias.
+                    </p>
+                    <div class="tableau">
+                        <table>
+                            <tr class="thbasic">
+                                <th>Basic</th>
+                            </tr>
+                            <tr>
+                                <td>Floorplanning</td>
+                            </tr>
+                            <tr>
+                                <td>10 hours support</td>
+                            </tr>
+                            <tr>
+                                <td>Photography</td>
+                            </tr>
+                            <tr>
+                                <td>20% furniture discount</td>
+                            </tr>
+                            <tr>
+                                <td>Good deals</td>
+                            </tr>
+                            <tr>
+                                <td><span>$ 199</span> <br> per room</td>
+                            </tr>
+                            <tr>
+                                <td><a href="http://#" class="signblack">Sign Up</a></td>
+                            </tr>
+                        </table>
+                        <table>
+                            <tr class="thpro">
+                                <th>Pro</th>
+                            </tr>
+                            <tr>
+                                <td>Floorplanning</td>
+                            </tr>
+                            <tr>
+                                <td>50 hours support</td>
+                            </tr>
+                            <tr>
+                                <td>Photography</td>
+                            </tr>
+                            <tr>
+                                <td>50% furniture discount</td>
+                            </tr>
+                            <tr>
+                                <td>GREAT deals</td>
+                            </tr>
+                            <tr>
+                                <td><span>$ 249</span> <br> per room</td>
+                            </tr>
+                            <tr>
+                                <td><a href="http://#" class="signwhite">Sign Up</a></td>
+                            </tr>
+                        </table>
                     </div>
-                    <div>
-                        <img src="./img/john-doe.jpg" alt="John Doe">
-                        <h4>John Doe</h4>
-                        <p>Designer</p>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, libero atque.
-                        </p>
-                    </div>
-                    <div>
-                        <img src="./img/mikeross.jpg" alt="Mike Ross">
-                        <h4>John Doe</h4>
-                        <p>Designer</p>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, libero atque.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
-    <footer class="footer"></footer>
+                </section>
+                <section id="contact" class="contact">
+                    <h2>Contact .</h2>
+                    <p>
+                        Do you want us to style your home ? Fill out the form and fill me with the details :) We love
+                        meeting new people!
+                    </p>
+                    <form action="" method="post">
+                        <div>
+                            <label for="name">Name</label>
+                            <input type="text" name="name" id="name">
+                        </div>
+                        <div>
+                            <label for="mail">Email</label>
+                            <input type="email" name="mail" id="mail">
+                        </div>
+                        <div>
+                            <label for="message">Message</label>
+                            <input type="text" name="message" id="message">
+                        </div>
+                        <input type="submit" value="Send Message" class="inputlast">
+                    </form>
+                </section>
+            </main>
+        </div>
+        <footer class="footer">
+            <p>
+                Exercice réalisé par Martin ABOU. Template vu sur <a href="http://w3.css" target="_blank">w3.css </a>.
+            </p>
+        </footer>
+    </div>
 </body>
+
 </html>
